# openrvbench

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: board_result.md  bug_report.md
.github/workflows/: ci.yml  release.yml
benchmarks/ai/: CMakeLists.txt  ai_bench.cpp
benchmarks/cpu/: CMakeLists.txt  cpu_bench.cpp
benchmarks/crypto/: CMakeLists.txt  crypto_bench.cpp
benchmarks/extensions/: CMakeLists.txt  extensions_bench.cpp
benchmarks/memory/: CMakeLists.txt  memory_bench.cpp
benchmarks/network/: CMakeLists.txt  network_bench.cpp
benchmarks/storage/: CMakeLists.txt  storage_bench.cpp
benchmarks/thermal/: CMakeLists.txt  thermal_bench.cpp
benchmarks/vector/: CMakeLists.txt  vector_bench.cpp
cli/: openrvbench
docs/: ARCHITECTURE.md  CONTRIBUTING.md
monitoring/: system_monitor.cpp  system_monitor.h
results/: OrangePiRV2_report.html  result_writer.cpp  result_writer.h
scripts/: board_detect.py  build.sh  compare_results.py  install.sh  report_generator.py
